# loans-sim

./: .gitignore  Makefile  README.md  pyproject.toml
src/loans_sim/: constants.py  utils.py
src/loans_sim/assets/: temporal_asset.py
src/loans_sim/assets/savings_account/: high_yield.py
src/loans_sim/custom_pydantic/: annotations.py
src/loans_sim/liabilities/: mitigation_action.py
src/loans_sim/liabilities/loans/: fixed_rate_loan.py  mitigation.py  payment.py
src/loans_sim/sim/: simulation.py
test/unit/assets/savings_account/: high_yield.py  test_high_yield.py
test/unit/liabilities/loans/: test_fixed_rate_loan.py  test_mitigation.py  test_payment.py
