[project]
name = "loans-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zackjyoung3", email = "zackjyoung3@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
