[project]
name = "loans-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zackjyoung3", email = "zackjyoung3@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "python-dateutil>=2.9.0.post0",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
